Issue fixed #19985 Send email confirmation popup close button area overlapping
Issue fixed #19985 Send email confirmation popup close button area overlapping

--- a/app/design/adminhtml/Magento/backend/web/css/source/components/_modals_extend.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/components/_modals_extend.less
@@ -146,13 +146,13 @@
     }
 
     .action-close {
-        padding: 1rem;
+        padding: @modal-popup__padding - 2;
 
         &:active,
         &:focus {
             background: transparent;
-            padding-right: 1rem;
-            padding-top: 1rem;
+            padding-right: @modal-popup__padding - 2;
+            padding-top: @modal-popup__padding - 2;
         }
     }
 }
